# algomentor-ai

./: Cargo.toml  README.md  generate_icons.py  setup-gui.ps1  setup_desktop.ps1
assets/knowledge_base/: 02_hashing_frequency_patterns.md  03_sorting_binary_search.md
gui/: index.html  main.js  style.css
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  runner.rs
src/analyzer/: code_reader.rs  complexity.rs  highlighter.rs  language.rs  mod.rs
src/assets/: guide.md  mod.rs
src/assets/knowledge/: 00_java_collections_cheatsheet.md  01_arrays_two_pointers_sliding_window.md  04_strings.md  05_intervals_sweep_line.md  06_linked_list.md  07_stack_queue_deque_monotonic.md  08_trees_dfs_bfs.md  09_graphs.md  10_heap_priority_queue.md  11_trie.md  12_bit_manipulation_math.md  13_dp_backtracking.md
src/chat/: input.rs  mod.rs  renderer.rs  session.rs
src/cli/: commands.rs  mod.rs
src/config/: settings.rs
src/dashboard/: app.rs  charts.rs  mod.rs  widgets.rs
src/llm/: anthropic.rs  embedding.rs  local.rs  mod.rs  openai.rs  openrouter.rs  prompts.rs  provider.rs  streaming.rs
src/mcp/: client.rs
src/memory/: database.rs  history.rs  migrations.rs  mod.rs  profile.rs  rag.rs
src/task/: discovery.rs  mod.rs  models.rs  parser.rs
src/tools/: compiler.rs  leetcode.rs  mod.rs
src/utils/: error.rs  markdown.rs  mod.rs
src/watcher/: handler.rs
