[package]
name    = "algomentor-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
futures-util       = "0.3"
anyhow             = "1"
dirs               = "6"
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1",   features = ["v4"] }
algomentor         = { path = ".." }
html2md = "0.2.15"
